tests/tests/ui/has_many_via_scalar_terminal_type_mismatch.stderr
error[E0277]: the trait bound `toasty::stmt::Path<User, toasty::stmt::List<i64>>: From<toasty::stmt::Path<User, toasty::stmt::List<std::string::String>>>` is not satisfied
  --> tests/ui/has_many_via_scalar_terminal_type_mismatch.rs:6:17
   |
 6 | #[derive(Debug, toasty::Model)]
   |                 ^^^^^^^^^^^^^ unsatisfied trait bound
...
16 |     #[has_many(via = comments.article.title)]
   |                                       ----- required by a bound introduced by this call
   |
   = help: the trait `From<toasty::stmt::Path<User, toasty::stmt::List<std::string::String>>>` is not implemented for `toasty::stmt::Path<User, toasty::stmt::List<i64>>`
   = note: required for `toasty::stmt::Path<User, toasty::stmt::List<std::string::String>>` to implement `Into<toasty::stmt::Path<User, toasty::stmt::List<i64>>>`
